--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-3">
-                    <img src="images/category-1.jpg">
+                    <img src="images/local/muestra.JPG">
                 </div>
                 <div class="col-3">
-                    <img src="images/category-2.jpg">
+                    <img src="images/local/local.JPG">
                 </div>
                 <div class="col-3">
-                    <img src="images/category-3.jpg">
+                    <img src="images/local/vitrina.jpeg">
                 </div>
         </div>
         </div>
@@ -63,7 +63,7 @@
         <h2 class="title">Nuestros productos</h2>
         <div class="row">
             <div class="col-4">
-                <a href="product-details.html"><img src="images/product-1.jpg"></a>
+                <a href="product-details.html"><img src="images/productos/CINTA_COB.psd.png"></a>
                <a href=""> <h4>souvlaki</h4></a>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -75,7 +75,7 @@
                 <p>₹200.00</p>   
             </div>
             <div class="col-4">
-                <img src="images/product-2.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Sushi</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -87,7 +87,9 @@
                 <p>₹350.00</p>   
             </div>
             <div class="col-4">
-               <a href="product-details2.html"><img src="images/product-3.jpg"></a> 
+                <a href="product-details2.html">
+                <img src="images/productos/CINTA_COB.psd.png" alt="Descripción del Producto" onerror="this.onerror=null; this.src='images/default.jpg';">
+                </a>
                 <h4>Biryani</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -99,7 +101,7 @@
                 <p>₹400.00</p>   
             </div>
             <div class="col-4">
-                <img src="images/product-4.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Kunafa</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -114,7 +116,7 @@
          <h2 class="title">Most Served</h2>
          <div class="row">
             <div class="col-4">
-                <img src="images/product-5.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">>
                 <h4>Panner Butter Masala</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -126,7 +128,7 @@
                 <p>₹200.00</p>   
             </div>
             <div class="col-4">
-                <img src="images/product-6.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Malai Kofta</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -138,7 +140,7 @@
                 <p>₹320.00</p>   
             </div>
             <div class="col-4">
-                <img src="images/product-7.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Aloo tikki</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -150,7 +152,7 @@
                 <p>₹150.00</p>   
             </div>
             <div class="col-4">
-                <img src="images/product-8.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Butter Garlic Naan</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -164,7 +166,7 @@
          </div>
          <div class="row">
             <div class="col-4">
-                <img src="images/product-9.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Madras Chicken Curry</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -176,7 +178,7 @@
                 <p>₹350.00</p>   
             </div>
             <div class="col-4">
-                <img src="images/product-10.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Aloo Pharatha</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -188,7 +190,7 @@
                 <p>₹150.00</p>   
             </div>
             <div class="col-4">
-                <a href="product-details3.html"><img src="images/product-11.jpg"></a>
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Badam Kheer </h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -200,7 +202,7 @@
                 <p>₹150.00</p>   
             </div>
             <div class="col-4">
-                <img src="images/product-12.jpg">
+                <img src="images/productos/CINTA_COB.psd.png">
                 <h4>Shrikhand</h4>
                 <div class="rating">
                     <i class="fa fa-star" ></i>
@@ -220,7 +222,7 @@
             <div class="row">
               <div class="col-3">
                 <i class="fa fa-quote-left" ></i>
-                  <p>The food is superb and delivery was superfast, I loved the deserts more then other dishes.</p>
+                  <p>La cinta COB realmente transformó mis espacios, ¡totalmente recomendados!”</p>
                   <div class="rating">
                         <i class="fa fa-star" ></i>
                         <i class="fa fa-star" ></i>
@@ -233,7 +235,7 @@
               </div>
               <div class="col-3">
                 <i class="fa fa-quote-left" ></i>
-                  <p>Never tasted such awesome sushi anywhere and I once visited their restaurant their services are high standard.</p>
+                  <p>El diseño que hicieron para mi local superó mis expectativas. ¡Gracias por su profesionalismo!</p>
                   <div class="rating">
                         <i class="fa fa-star" ></i>
                         <i class="fa fa-star" ></i>
@@ -246,7 +248,7 @@
               </div>
               <div class="col-3">
                 <i class="fa fa-quote-left" ></i>
-                  <p>the delivery is superfast and the food is still hot and the prices are reasonable. I would recommed to taste their deserts.</p>
+                  <p>¡Excelente calidad en los acabados! Mis clientes quedaron encantados con la iluminación.</p>
                   <div class="rating">
                         <i class="fa fa-star" ></i>
                         <i class="fa fa-star" ></i>
@@ -262,52 +264,22 @@
     </div>
 
 <!------------ brands ------------>
-    <div class="brands">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-5">
-                    <img src="images/logo-godrej.png" >
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-oppo.png" >
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-coca-cola.png" >
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-paypal.png" >
-                </div>
-                <div class="col-5">
-                    <img src="images/logo-philips.png" >
-                </div>
-            </div>
-        </div>
-    </div>
 
 <!----------- footer---------->
 
 <div class="footer">
     <div class="container">
         <div class="row">
-            <div class="footer-col-1">
-                <h3>Download Our App</h3>
-                <p>Download App for Android and ios mobile phone</p>
-                <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
-                </div>
-            </div>
             <div class="footer-col-2">
                 <img src="images/LOGO_LED.png" >
-                <p>One Cannot Think Well, Love Well, <br> Sleep Well, If One Has Not Dined Well</p>
+                <p>Creamos y transformamos tus espacios con calidad y estilo </p>
             </div>
             <div class="footer-col-3">
-                <h3>Useful Links</h3>
+                <h3>Menú: </h3>
                 <ul>
-                    <li>Coupons</li>
-                    <li>Blog Post</li>
-                    <li>Return Policy</li>
-                    <li>Join Affiliate</li>
+                    <a href="/index.html"><li>Inicio</li></a>
+                    <a href="/products.html"><li>Productos</li></a>
+                    <a href="/about.html"><li>Nosotros</li></a>
                 </ul>
             </div>
             <div class="footer-col-4">
@@ -320,7 +292,7 @@
             </div>
         </div>
         <hr>
-        <p class="Copyright">Copyright 2024-  Flavor Online </p>
+        <p class="Copyright">Copyright 2024 - LED DIGITAL </p>
     </div>
 </div>
 <!------ js for toggle menu-------->
