--- a/product-details.html
+++ b/product-details.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="images/logo-1.png" >
+                    <img src="images/LOGO_LED.png" >
                     <p>One Cannot Think Well, Love Well, <br> Sleep Well, If One Has Not Dined Well</p>
                 </div>
                 <div class="footer-col-3">
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <hr>
-            <p class="Copyright">Copyright 2022-  Flavor Online </p>
+            <p class="Copyright">Copyright 2024 - LED DIGITAL </p>
         </div>
     </div>
 </body>
