--- a/about.html
+++ b/about.html
@@ -21,11 +21,8 @@
                     <li><a href="products.html">Menu</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div> 
     </div>
     <!-------- offer -------->
@@ -56,39 +53,17 @@
     <div class="small-container">
         <div class="row">
             <div class="col-3">
-                <img src="images/category-1.jpg">
+                <img src="images/local/muestra.JPG">
             </div>
             <div class="col-3">
-                <img src="images/category-2.jpg">
+                <img src="images/local/vitrina.jpeg">
             </div>
             <div class="col-3">
-                <img src="images/category-3.jpg">
+                <img src="images/local/local.JPG">
             </div>
     </div>
     </div>
 
-</div>
-
-<div class="brands">
-    <div class="small-container">
-        <div class="row">
-            <div class="col-5">
-                <img src="images/logo-godrej.png" >
-            </div>
-            <div class="col-5">
-                <img src="images/logo-oppo.png" >
-            </div>
-            <div class="col-5">
-                <img src="images/logo-coca-cola.png" >
-            </div>
-            <div class="col-5">
-                <img src="images/logo-paypal.png" >
-            </div>
-            <div class="col-5">
-                <img src="images/logo-philips.png" >
-            </div>
-        </div>
-    </div>
 </div>
 
 <!----------- footer---------->
@@ -96,38 +71,29 @@
 <div class="footer">
     <div class="container">
         <div class="row">
-            <div class="footer-col-1">
-                <h3>Download Our App</h3>
-                <p>Download App for Android and ios mobile phone</p>
-                <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
-                </div>
-            </div>
             <div class="footer-col-2">
                 <img src="images/LOGO_LED.png" >
-                <p>One Cannot Think Well, Love Well, <br> Sleep Well, If One Has Not Dined Well</p>
+                <p>Creamos y transformamos tus espacios con calidad y estilo </p>
             </div>
             <div class="footer-col-3">
-                <h3>Useful Links</h3>
+                <h3>Menú: </h3>
                 <ul>
-                    <li>Coupons</li>
-                    <li>Blog Post</li>
-                    <li>Return Policy</li>
-                    <li>Join Affiliate</li>
+                    <a href="/index.html"><li>Inicio</li></a>
+                    <a href="/products.html"><li>Productos</li></a>
+                    <a href="/about.html"><li>Nosotros</li></a>
                 </ul>
             </div>
             <div class="footer-col-4">
-                <h3>Follow Us</h3>
+                <h3>Siguenos : </h3>
                 <ul>
-                    <a  href=" https://www.facebook.com/shubham.sony.161" target="_blank"><li>Facebook</li></a>
-                    <a href="https://twitter.com/sathvik995" target="_blank"><li>Twitter</li></a>
-                    <a href="https://www.instagram.com/bejjankisathvik/" target="_blank"><li>Instagram</li></a>
-                    <a href="https://youtube.com/channel/UCJJO3_v47-DDm5GET9rUwcw" target="_blank"><li>Youtube</li></a>
+                    <a  href="https://www.facebook.com/leddigitalpe" target="_blank"><li>Facebook</li></a>
+                    <a href="https://www.instagram.com/leddigital_peru/" target="_blank"><li>Instagram</li></a>
+                    <a href="https://www.tiktok.com/@leddigitalperu?lang=es" target="_blank"><li>Tik tok</li></a>
+                </ul>
             </div>
         </div>
         <hr>
-        <p class="Copyright">Copyright 2022-  Flavor Online </p>
+        <p class="Copyright">Copyright 2024 - LED DIGITAL </p>
     </div>
 </div>
 <!------ js for toggle menu-------->
@@ -150,4 +116,7 @@
 </script>
 
 </body>
+
+
 </html>
+
