--- a/account.html
+++ b/account.html
@@ -21,11 +21,8 @@
                     <li><a href="products.html">Menu</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div> 
     </div>
 <!----account-page------>
@@ -67,42 +64,31 @@
 <div class="footer">
     <div class="container">
         <div class="row">
-            <div class="footer-col-1">
-                <h3>Download Our App</h3>
-                <p>Download App for Android and ios mobile phone</p>
-                <div class="app-logo">
-                    <img src="images/play-store.png">
-                    <img src="images/app-store.png">
-                </div>
-            </div>
             <div class="footer-col-2">
-                <img src="images/logo-1.png" >
-                <p>One Cannot Think Well, Love Well, <br> Sleep Well, If One Has Not Dined Well</p>
+                <img src="images/LOGO_LED.png" >
+                <p>Creamos y transformamos tus espacios con calidad y estilo </p>
             </div>
             <div class="footer-col-3">
-                <h3>Useful Links</h3>
+                <h3>Menú: </h3>
                 <ul>
-                    <li>Coupons</li>
-                    <li>Blog Post</li>
-                    <li>Return Policy</li>
-                    <li>Join Affiliate</li>
+                    <a href="/index.html"><li>Inicio</li></a>
+                    <a href="/products.html"><li>Productos</li></a>
+                    <a href="/about.html"><li>Nosotros</li></a>
                 </ul>
             </div>
             <div class="footer-col-4">
-                <h3>Follow Us</h3>
+                <h3>Siguenos : </h3>
                 <ul>
-                    <a  href=" https://www.facebook.com/" target="_blank"><li>Facebook</li></a>
-                    <a href="https://twitter.com/" target="_blank"><li>Twitter</li></a>
-                    <a href="https://www.instagram.com/" target="_blank"><li>Instagram</li></a>
-                    <a href="https://youtube.com/" target="_blank"><li>Youtube</li></a>-
+                    <a  href="https://www.facebook.com/leddigitalpe" target="_blank"><li>Facebook</li></a>
+                    <a href="https://www.instagram.com/leddigital_peru/" target="_blank"><li>Instagram</li></a>
+                    <a href="https://www.tiktok.com/@leddigitalperu?lang=es" target="_blank"><li>Tik tok</li></a>
                 </ul>
             </div>
         </div>
         <hr>
-        <p class="Copyright">Copyright 2022-  Flavor Online </p>
+        <p class="Copyright">Copyright 2024 - LED DIGITAL </p>
     </div>
-</div>
-<!------ js for toggle menu-------->
+</div><!------ js for toggle menu-------->
 <script>
     var MenuItems= document.getElementById("MenuItems");
 
