--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
                 </div>
                 
                 <!-- Contenedor de Productos -->
-                <div id="products-container">
+                <div id="products-container" class="product-card">
                     <!-- Los productos se renderizarán dinámicamente aquí -->
                 </div>
                 
@@ -85,17 +85,6 @@
             </div>
             <hr>
             <p class="Copyright">Copyright 2024 - LED DIGITAL</p>
-        </div>
-    </div>
-
-    <!-- Modal -->
-    <div id="product-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <img id="modal-image" src="" alt="Producto" style="width:100%;">
-            <h2 id="modal-title"></h2>
-            <p id="modal-description"></p>
-            <p id="modal-price"></p>
         </div>
     </div>
 
