--- a/product_detail.html
+++ b/product_detail.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalle del Producto</title>
+    <!-- Icon -->
+    <link rel="shortcut icon" href="images/Leddigital.png" type="image/png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos de Font Awesome -->
