--- a/product_detail.html
+++ b/product_detail.html
@@ -48,32 +48,34 @@
     </style>
 </head>
 <body>
-    <!-- Barra de Navegación -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+        <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light navbar-product-detail">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/LOGO_LED.png" alt="Logo LED Digital" width="150">
+                <img src="images/Leddigital.png" width="250px" alt="Logo LED Digital">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+            <button class="navbar-toggler custom-toggler-black" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon navbar-toggler-dark"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="products.html">Productos</a>
+                        <a class="nav-link active" href="products.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contáctanos</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <!-- Contenedor para los detalles del producto -->
     <div id="product-details" class="container mt-5">
         <!-- El contenido se insertará aquí mediante JavaScript -->
