--- a/product_detail.html
+++ b/product_detail.html
@@ -10,6 +10,8 @@
     <!-- Iconos de Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- Estilos Personalizados -->
+       <!-- Tu CSS -->
+    <link rel="stylesheet" href="style.css">
     <style>
         .product-detail img {
             max-width: 100%;
@@ -80,6 +82,37 @@
     <div id="product-details" class="container mt-5">
         <!-- El contenido se insertará aquí mediante JavaScript -->
     </div>
+
+         <!-- Footer -->
+    <footer class="footer bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="images/LOGO_LED.png" alt="Logo LED Digital" class="mb-2">
+                    <p>Creamos y transformamos tus espacios con calidad y estilo.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5 class="titulo-negrita-subrayado">Menú</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html" class="text-white">Inicio</a></li>
+                        <li><a href="products.html" class="text-white">Productos</a></li>
+                        <li><a href="about.html" class="text-white">Nosotros</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5 class="titulo-negrita-subrayado">Síguenos</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="https://www.facebook.com/leddigitalpe" target="_blank" class="text-white">Facebook</a></li>
+                        <li><a href="https://www.instagram.com/leddigital_peru/" target="_blank" class="text-white">Instagram</a></li>
+                        <li><a href="https://www.tiktok.com/@leddigitalperu?lang=es" target="_blank" class="text-white">TikTok</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="bg-white">
+            <p class="text-center mb-0">© 2024 - LED DIGITAL</p>
+        </div>
+    </footer>
+
 
     <!-- Bootstrap JS y dependencias -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
